@@ -4,7 +4,6 @@ plugins {
     id("com.saveourtool.save.buildutils.kotlin-jvm-configuration")
     id("com.saveourtool.save.buildutils.spring-boot-configuration")
     id("com.saveourtool.save.buildutils.spring-data-configuration")
-    alias(libs.plugins.download)
     kotlin("plugin.allopen")
     alias(libs.plugins.kotlin.plugin.jpa)
 }
@@ -26,6 +25,13 @@ dependencies {
     implementation(projects.saveCloudCommon)
     implementation(libs.spring.boot.starter.security)
     implementation(libs.spring.security.core)
+    testImplementation(libs.spring.security.test)
+    testImplementation(libs.junit.jupiter.api)
+}
+
+tasks.withType<Test> {
+    jvmArgs("--enable-preview")
+    useJUnitPlatform()
 }
 
 configureJacoco()
